--- a/Labs/labb2/labb2.ipynb
+++ b/Labs/labb2/labb2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The point (22.0, 44.0) is classified as Pikachu\n"
+      "The point (11.0, 22.0) is classified as Pichu\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "        print(\"Enter positive numbers. Please.\")\n",
     "    else:\n",
     "        user_point = (x_input, y_input)\n",
-    "        predicted_label = classify_point(user_point, Data)\n",
+    "        predicted_label = classify_point(user_point, dataset)\n",
     "\n",
     "        result_label = \"Pikachu\" if predicted_label == 1 else \"Pichu\"\n",
     "        print(f\"The point {user_point} is classified as {result_label}\")\n",
@@ -88,19 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The point (44.0, 55.0) is classified as Pikachu\n"
+      "The point (43.0, 56.0) is classified as Pikachu\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
+    "\n",
+    "dataset_array = np.array(dataset)\n",
     "\n",
     "def classify_point(point, data, k=10):\n",
     "    distances = np.sqrt(np.sum((data[:, :2] - point) ** 2, axis=1))\n",
@@ -122,7 +125,7 @@
     "            print(\"Enter positive numbers. Please.\")\n",
     "        else:\n",
     "            user_point = (x_input, y_input)\n",
-    "            predicted_label = classify_point(user_point, data, k=10)\n",
+    "            predicted_label = classify_point(user_point, dataset_array, k=10)  # Using dataset_array\n",
     "            result_label = \"Pikachu\" if predicted_label == 1 else \"Pichu\"\n",
     "            print(f\"The point {user_point} is classified as {result_label}\")\n",
     "\n",
@@ -131,7 +134,7 @@
     "            break\n",
     "\n",
     "    except ValueError:\n",
-    "        print(\"Invalid input. Please enter valid coordinates.\")\n"
+    "        print(\"Invalid input. Please enter valid coordinates.\")"
    ]
   }
  ],
